examples/test/testpolicy2629.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2629
  namespace: namespace368
spec:
  podSelector:
    matchLabels:
      key7: value23
      key34: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value2
      podSelector:
        matchLabels:
          key18: value27
          key16: value48
          key31: value38
